--- a/configs/quantized/resnet32_w4a4/a2w8.yaml
+++ b/configs/quantized/resnet32_w4a4/a2w8.yaml
@@ -1,5 +1,5 @@
 A: 0
-aa: rand-m9-mstd0.5-inc1
+aa: null
 amp: true
 apex_amp: true
 aq_asym: false
@@ -9,7 +9,7 @@ aq_mode: LSQ
 aq_neg: null
 aq_pos: null
 aug_splits: 0
-batch_size: 128
+batch_size: 256
 bn_eps: null
 bn_modules: null
 bn_momentum: null
@@ -25,7 +25,7 @@ crop_pct: 1.0
 cutmix: 1.0
 cutmix_minmax: null
 data_dir: /home/xts/code/dataset/cifar100/
-dataset: cifar100
+dataset: torch/cifar100
 decay_epochs: 30
 decay_milestones:
 - 40
@@ -56,7 +56,7 @@ fl_wq_pos: null
 gp: null
 hflip: 0.5
 img_size: 32
-initial_checkpoint: /home/xts/code/SmallQuant/configs/quantized/resnet32_w4a4/w8a8.pth.tar
+initial_checkpoint: /home/xts/code/SmallQuant/configs/quantized/resnet32_w4a4/fp32.pth.tar
 input_size: null
 interpolation: bicubic
 jsd: false
@@ -65,9 +65,9 @@ kd_type: last
 local_rank: 0
 log_interval: 50
 log_wandb: false
-lr: 6e-4
-min_lr: 1e-5
-sched: cosine
+lr: 0.001
+min_lr: 1.0e-05
+sched: multistep
 weight_decay: 6e-2
 lr_cycle_limit: 1
 lr_cycle_mul: 1.0
@@ -86,7 +86,7 @@ mixup: 0.8
 mixup_mode: batch
 mixup_off_epoch: 0
 mixup_prob: 1.0
-mixup_switch_prob: 0.5
+mixup_switch_prob: 0.0
 model: resnet32
 model_ema: false
 model_ema_decay: 0.9998
@@ -98,7 +98,7 @@ no_bn: false
 no_prefetcher: false
 no_resume_opt: false
 num_classes: 100
-opt: adamw
+opt: sgd
 opt_betas: null
 opt_eps: null
 output: ''
@@ -203,13 +203,11 @@ val_split: validation
 validation_batch_size_multiplier: 1
 vflip: 0.0
 warmup_epochs: 10
-warmup_lr: 0.000001
-weight_decay: 6e-2
+warmup_lr: 1.0e-05
+weight_decay: 0.0001
 workers: 32
 wq_asym: false
-wq_bitw: 2
+wq_bitw: 8
 wq_enable: true
 wq_mode: PACT
-wq_neg: -8
 wq_per_channel: true
-wq_pos: 7
